--- a/44-jquery.html
+++ b/44-jquery.html
@@ -25,7 +25,7 @@
 
             <script type="text/javascript">
 
-                // jQuery UI
+                // jQuery UI Draggable
                 $( function() {
                     $( "#draggable" ).draggable();
                 } );
