--- a/55-jquery.html
+++ b/55-jquery.html
@@ -75,7 +75,7 @@
 
             <script type="text/javascript">
 
-                // Accordion
+                // jQuery UI Accordion
                 $ ( function() {
 
                     $( "#accordion" ).accordion();
