--- a/56-jquery.html
+++ b/56-jquery.html
@@ -49,7 +49,7 @@
                
             <script type="text/javascript">
 
-                // Sortables
+                // jQuery UI Sortables
                 $( function() {
 
                     $( "#sortable" ).sortable();
